# BASH

task1/: run.sh
task2/: CMakeLists.txt
task2/A/: preparing.py
task2/B/: CMakeLists.txt  lib.cpp  lib.h  txt
task2/C/: main.cpp  main.h  main_test.cpp  main_test.h
